// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container should renders component with default props 1`] = `
<div
  className="mfui-beta-container mfui-beta-container_bg-color_default"
>
  <ContentArea
    classes={Object {}}
    innerBackgroundColor="transparent"
    outerBackgroundColor="transparent"
  >
    <TitleDescriptionBox
      title="title"
    />
  </ContentArea>
</div>
`;

exports[`Container should renders component with optional props 1`] = `
<div
  className="mfui-beta-container mfui-beta-container_bg-color_green mfui-beta-container_disable-padding-top mfui-beta-container_disable-padding-bottom className"
  id="id"
>
  <ContentArea
    classes={Object {}}
    innerBackgroundColor="transparent"
    outerBackgroundColor="transparent"
  >
    <TitleDescriptionBox
      title="title"
    />
  </ContentArea>
</div>
`;
